The Pros and Cons of AsyncGetCallTrace Profilers